Endrer diffing av data for utledning av endringsdatoer for medlemskapsvurderinger